--- a/README.html
+++ b/README.html
@@ -1,3 +1,8 @@
+<html>
+<body>
+<style>
+body a, span, tr, td { white-space: pre; }
+</style>
 # Inc_v3_FER
 Facial Expression Recognition using Inception V3 Model from keras
 This is a baseline to my thesis on Facial Expression recognition with videos.
@@ -29,3 +34,5 @@ Training:
   -> saves the weights after completion to disk similarly
   
 Any suggestions are welcome. This is still a work in progress. Thanks!
+</body>
+</html>
